--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+**/mvnw
+**/mvnw.cmd
+
+**/target/
+**/.mvn
+.idea
+**/.gitattributes
+
+**/.gitignore
